# strongswan

./: .appveyor.yml  .gitignore  .travis.yml  configure.ac  sonar-project.properties
conf/options/: charon.opt
scripts/: test.sh
src/libcharon/bus/: bus.c  bus.h
src/libcharon/bus/listeners/: listener.h
src/libcharon/plugins/kernel_iph/: kernel_iph_net.c
src/libcharon/plugins/kernel_libipsec/: kernel_libipsec_plugin.c  kernel_libipsec_router.c
src/libcharon/plugins/kernel_netlink/: kernel_netlink_net.c
src/libcharon/plugins/kernel_pfroute/: kernel_pfroute_net.c
src/libcharon/plugins/kernel_wfp/: kernel_wfp_compat.c  kernel_wfp_compat.h
src/libcharon/plugins/pass_lan/: Makefile.am  pass_lan_listener.c  pass_lan_listener.h  pass_lan_plugin.c  pass_lan_plugin.h
src/libcharon/sa/: ike_sa.h
src/libcharon/sa/ikev2/tasks/: ike_vendor.c
src/libipsec/: Makefile.am  codel_queue.h  ipsec_processor.c
src/libstrongswan/: Makefile.am  library.c  library.h
src/libstrongswan/collections/: linked_list.h
src/libstrongswan/networking/: tun_device.c  tun_device.h  windows_tun.c  windows_tun.h  wintun_support.c  wintun_support.h
src/libstrongswan/plugins/: plugin.h  plugin_loader.c
src/libstrongswan/plugins/bliss/tests/suites/: test_bliss_sampler.c  test_bliss_sign.c
src/libstrongswan/utils/: windows_helper.c  windows_helper.h
src/libstrongswan/utils/compat/: windows.c  windows.h
src/libstrongswan/utils/utils/: string.c  string.h
